fixing the overflow scroll bars

--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ h1 {
 h2 {
     font-family: "Comic Sans MS", cursive, sans-serif;
     text-align: center;
+    font-weight: bold;
+    font-size: 25px;
 }
 
 p {
@@ -32,10 +34,7 @@ p {
     height: 35px;
     position: relative;
     float: right;
-}
-
-div {
-    overflow: scroll;
+    border: 0px;
 }
 
 #chickenTag {
@@ -58,6 +57,8 @@ div {
         border: 3px solid black;
         width: 25%;
         height: 160px;
+        overflow: scroll;
+        overflow-x: hidden;
     }
     #chicken {
         margin-left: 50px;
@@ -82,6 +83,8 @@ div {
         width: 40%;
         height: 160px;
         margin-bottom: 50px;
+        overflow: scroll;
+        overflow-x: hidden;
     }
     #chicken {
         margin-left: 50px;
@@ -104,6 +107,8 @@ div {
         margin-bottom: 50px;
         width: calc(100% - 100px);
         height: 160px;
+        overflow: scroll;
+        overflow-x: hidden;
     }
     #chicken {
         margin-left: 50px;
